<resources>
    <string name="app_name">CryptoMaster</string>
    <string name="format_price" formatted="false">$%.5f</string>
    <string name="title_price">PRICE</string>
    <string name="title_market_cap">MARKET CAP</string>
    <string name="go_to_website">GO TO WEBSITE</string>
    <string name="title_coins">Buy, sell and hold crypto</string>
    <string name="error">Could not load data</string>
    <string name="try_again">Try again</string>
    <string name="hint_search">Search</string>
    <string name="sorry">Sorry</string>
    <string name="not_match">No result match this keyword</string>
    <string name="invite_friend"><![CDATA[<p>You can earn $10  when you invite a friend to buy crypto. <font color="#38A0FF">Invite your friend</font></p>]]></string>
    <string name="title_top_coins">Top</string>
    <string name="title_top_coins_end">rank crypto</string>
</resources>