<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-16dp"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/bottomSheetBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <View
                android:id="@+id/dragView"
                android:layout_width="64dp"
                android:layout_height="4dp"
                android:background="@drawable/bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/coinDetailImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragView"
                tools:ignore="ContentDescription"
                tools:src="@drawable/bg_grey" />

            <TextView
                android:id="@+id/coinDetailNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/coinDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/dragView"
                tools:text="Bit Coin" />

            <TextView
                android:id="@+id/coinDetailSymbolTv"
                style="@style/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/coinDetailNameTv"
                app:layout_constraintStart_toEndOf="@id/coinDetailNameTv"
                app:layout_constraintTop_toTopOf="@+id/coinDetailNameTv"
                tools:text="(BTC)" />

            <TextView
                android:id="@+id/coinDetailPriceTitle"
                style="@style/textPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_price"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/coinDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/coinDetailNameTv" />

            <TextView
                android:id="@+id/coinDetailPriceTv"
                style="@style/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/coinDetailPriceTitle"
                app:layout_constraintStart_toEndOf="@id/coinDetailPriceTitle"
                app:layout_constraintTop_toTopOf="@id/coinDetailPriceTitle"
                tools:text="$ 22,000.11" />

            <TextView
                android:id="@+id/coinDetailMarketCapTitle"
                style="@style/textPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_market_cap"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/coinDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/coinDetailPriceTv" />

            <TextView
                android:id="@+id/coinDetailMarketCapTv"
                style="@style/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/coinDetailMarketCapTitle"
                app:layout_constraintStart_toEndOf="@id/coinDetailMarketCapTitle"
                app:layout_constraintTop_toTopOf="@id/coinDetailMarketCapTitle"
                tools:text="$ 1.07 trillion" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/coinDetailScrollView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/coinDetailMarketCapTv">

                <TextView
                    android:id="@+id/coinDetailDescriptionTv"
                    style="@style/textSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="description" />
            </androidx.core.widget.NestedScrollView>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coinDetailScrollView" />

            <TextView
                android:id="@+id/gotoWebSiteTv"
                style="@style/buttonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/go_to_website"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>